Use Lazy to simplify the demarcate process.